[package]
name = "divan"
version = "0.1.2"
edition = "2021"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
description = "Statistically-comfy benchmarking library."
repository = "https://github.com/nvzqz/divan"
homepage = "https://github.com/nvzqz/divan"
documentation = "https://docs.rs/divan"
categories = ["development-tools::profiling"]
keywords = ["benchmark", "criterion", "instrument", "measure", "performance"]
readme = "README.md"

[dependencies]
divan-macros = { version = "0.1.2", path = "macros" }

clap = { version = "4", default-features = false, features = ["std", "env"] }
condtype = "1.3"
regex = { package = "regex-lite", version = "0.1", default-features = false, features = ["std", "string"] }

[target.'cfg(not(any(windows, target_os = "linux", target_os = "android")))'.dependencies]
# We use linkme to make benchmark/group entries discoverable. On platforms where
# it doesn't work, we instead use pre-main to build a linked list.
linkme = { version = "0.3", default-features = false }

[features]
default = ["wrap_help"]
help = ["clap/help"]
wrap_help = ["help", "clap/wrap_help"]

# Benchmark internals. Not meant for public use.
internal_benches = []

[workspace]
members = ["macros", "examples", "internal_benches"]

[workspace.dependencies]
divan = { path = "." }
