[package]
name = "examples"
version = "0.0.0"
edition = "2021"
authors = ["Nikolai Vazquez"]
license = "MIT OR Apache-2.0"
description = "Examples for Divan, a statistically-comfy benchmarking library."
readme = "../README.md"
publish = false

[dependencies]
divan = { workspace = true }
fastrand = "2"
image = { version = "0.24", optional = true }
libc = "0.2.147"
rayon = "1"

# Hash
fnv = { version = "1", optional = true }
highway = { version = "1.1", optional = true }
metrohash = { version = "1", optional = true }
twox-hash = { version = "1.6", optional = true }
wyhash = { version = "0.5", optional = true }

[features]
hash = ["fnv", "highway", "metrohash", "twox-hash", "wyhash"]

[[bench]]
name = "collections"
harness = false

[[bench]]
name = "hash"
harness = false
required-features = ["hash"]

[[bench]]
name = "image"
harness = false
required-features = ["image"]

[[bench]]
name = "math"
harness = false

[[bench]]
name = "panic"
harness = false

[[bench]]
name = "scratch"
harness = false

[[bench]]
name = "sort"
harness = false

[[bench]]
name = "string"
harness = false

[[bench]]
name = "threads"
harness = false

[[bench]]
name = "time"
harness = false
